# solarcredits-india

./: .gitignore  Cargo.toml  PROJECT_STRUCTURE.txt  README.md
backend/: Cargo.toml
backend/src/: main.rs  test_cases.rs
frontend/: config.js  index.html
src/: lib.rs  main.rs
